@@ -19,6 +19,10 @@
 #include "scoreboard.h"
 #include "apr_version.h"
 
+#if APR_HAVE_UNISTD_H
+#include <unistd.h>         /* for getpid() */
+#endif
+
 #if (APR_MAJOR_VERSION < 1)
 #undef apr_socket_create
 #define apr_socket_create apr_socket_create_ex
